# cortex

./: .gitignore  CLAUDE.md  README.md  ROADMAP.md  pyproject.toml
.harness/: config.json  plan.json  progress.md
.harness/sprints/sprint-1/: changes.md  eval.md  goal.md
.harness/sprints/sprint-10/: changes.md  goal.md
.harness/sprints/sprint-12/: changes.md  goal.md
.harness/sprints/sprint-13/: changes.md  goal.md
.harness/sprints/sprint-14/: changes.md  goal.md
.harness/sprints/sprint-2/: changes.md  eval.md  goal.md
.harness/sprints/sprint-25/: changes.md  goal.md
.harness/sprints/sprint-3/: changes.md  goal.md
.harness/sprints/sprint-4/: changes.md  (+1 more)
api/: db.py  main.py  vikunja.py
deploy/: README.md  caddy-cortex.conf  cortex-api.service  cortex-web.service
scripts/: cortex-backfill-extract.sh  cortex-capture.sh  cortex-nightly.sh  cortex-session-start.sh
src/cortex/: __init__.py  __main__.py  browse.py  classify.py  curated.py  db.py  decay.py  doctor.py  embeddings.py  extract.py  ingest.py  ingest_staging.py  install.py  migrate.py  port.py  raw.py  recall.py  reflect.py  server.py  sessions.py  status.py
tests/: test_browse.py  test_classify.py  test_curated.py  test_db.py  test_decay.py  test_degradation.py  test_doctor.py  test_e2e.py  test_embeddings.py  test_export_import.py  test_extract.py  test_ingest.py  test_ingest_staging.py  test_migrate.py  test_mutations.py  test_raw.py  test_recall.py  test_reflect.py  test_server.py  test_sessions.py  test_status.py
tests/api/: test_routes.py
web/: package-lock.json  package.json
(+13 files in other folders)
