[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cortex"
version = "0.2.0"
description = "Personal memory system with curated knowledge and raw chunk storage"
requires-python = ">=3.9"
dependencies = [
    "fastembed>=0.3.0",
    "sqlite-vec>=0.1.0",
    "mcp[cli]>=1.0.0",
]

[project.scripts]
cortex = "cortex.__main__:main"

[project.optional-dependencies]
dev = ["pytest>=7.0"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src", "."]
